--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-gunicorn
-pydantic
-httpx
-pytest
-psycopg2
+fastapi==0.115.7
+uvicorn==0.34.0
+gunicorn==23.0.0
+pydantic==2.10.6
+httpx==0.28.1
+pytest==8.3.4
+psycopg2==2.9.10
