--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ pydantic==2.10.6
 pydantic-geojson==0.2.0
 httpx==0.28.1
 pytest==8.3.4
-psycopg2-binary
+psycopg2-binary==2.9.10
+requests==2.32.4
+pyproj==3.7.1
