--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,40 @@
-name: Run FastAPI Tests
+name: 🐍 CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - 'master'
+      - 'dev'
+      - 'feature/**'
+      - 'release/**'
+  pull_request:
+    branches:
+      - 'master'
+      - 'dev'
+      - 'feature/**'
+      - 'release/**'
 
 jobs:
+  lint-flake8:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+
+      - name: Run flake8
+        run: flake8 .
+
   fastapi-test:
     runs-on: ubuntu-latest
 
