--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ pytest==8.3.4
 psycopg2-binary==2.9.10
 requests==2.32.4
 pyproj==3.7.1
+pyjwt[crypto]==2.10.1
+cryptography==44.0.0
+fastapi-keycloak==1.1.1
