fix(ci): change branch names on test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,16 +3,11 @@ name: 🧪 FastAPI Tests
 on:
   push:
     branches:
-      - 'master'
-      - 'dev'
-      - 'feature/**'
-      - 'release/**'
+      - 'main'
   pull_request:
     branches:
-      - 'master'
-      - 'dev'
-      - 'feature/**'
-      - 'release/**'
+      - 'main'
+  workflow_dispatch:
 
 jobs:
   fastapi-test:
