--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pydantic==2.10.6
 pydantic-geojson==0.2.0
 httpx==0.28.1
 pytest==8.3.4
-psycopg2-binary==2.9.10
+psycopg[binary,pool]
 requests==2.32.4
 pyproj==3.7.1
 pyjwt[crypto]==2.10.1
