--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+addopts = -m "not destructive"
 markers =
     ws: tests that require a ws schema
     ud: tests that require a ud schema
+    destructive: tests that modify or delete data
