refactor(logs): log to database

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,13 @@ KEYCLOAK_CLIENT_ID=
 KEYCLOAK_CLIENT_SECRET=
 KEYCLOAK_ADMIN_CLIENT_SECRET=
 KEYCLOAK_CALLBACK_URI=
+
+LOG_ADMIN_USER=admin
+LOG_ADMIN_PASSWORD=
+
+LOG_LEVEL=INFO
+LOG_DIR=logs
+LOG_ROTATE_DAYS=14
+LOG_DB_ENABLED=true
+LOG_DB_SAMPLE_RATE=1.0
+LOG_DB_MAX_BODY_BYTES=0
