refactor: change to pyproject.toml & add release scripts
Done to have the api version on a single place

--- a/.github/workflows/lint-ruff.yml
+++ b/.github/workflows/lint-ruff.yml
@@ -31,4 +31,4 @@ jobs:
         run: pip install ruff
 
       - name: Lint with ruff
-        run: ruff check . --config ruff.toml
+        run: ruff check .
