--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dev = ["pytest==8.3.4", "ruff"]
 requires = ["setuptools>=75.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+include = ["app*"]
+
 [tool.ruff]
 exclude = [
     "__pycache__",
